--- a/index.html
+++ b/index.html
@@ -105,52 +105,47 @@
 		<div class="row message">
 			<div class="col-md-12">
 				<p>Today is...</p>
-				<p>as beautiful as other days</p>
-				<p>but you realize</p>
-				<p>another year has gone</p>
-				<p>in a blink of the eyes</p>
-				<p><strong>however</strong></p>
-				<p>Do you know..?</p>
-				<p>today is just special</p>
-				<p>so special to you</p>
-				<p>that's why</p>
-				<p>Let's make it...</p>
-				<p>the best celebration ever</p>
-				<p>and let me share...</p>
-				<p>a piece of happiness to you</p>
-				<p>I made all this...</p>
-				<p>as a birthday present to you</p>
-				<p>thanks for being there</p>
-				<p>thanks for the friendship we made</p>
-				<p>thanks for everything</p>
+				<p>as beautiful as every other day</p>
+				<p>but somehow it feels different</p>
+				<p>maybe it's the sun...</p>
+				<p>or maybe it's just your birthday</p>
+				<p><strong>or maybe</strong></p>
+				<p>it's because I didn’t have to wipe anyone’s ass today</p>
+				<p>...but you probably did 😏</p>
+				<p>Still, today is special</p>
+				<p>and you should feel that too</p>
+				<p>thanks for being amazing</p>
+				<p>thanks for being funny, weird</p>
 				<p>I wish you all the best</p>
-				<p>May your life be at ease</p>
-				<p>May all your wishes come true</p>
+				<p>less poop, more peace</p>
+				<p>less crying, more cake</p>
+				<p>and may your wishes come true...</p>
+				<p>unless one of them is wanting to slap me 🥲 </p>
 				<p>Remember</p>
-				<p>your ambitions</p>
-				<p>you live as a free bird...</p>
-				<p>flying in the blue sky</p>
-				<p>Now things are different...</p>
-				<p>real story of your life</p>
-				<p>is just about to begin</p>
-				<p>indeed..</p>
-				<p>but...</p>
-				<p>don't worry</p>
-				<p>because...</p>
-				<p>God has your back</p>
-				<p>and</p>
-				<p>this year will be better</p>
-				<p>and I hope</p>
-				<p>you'll find...</p>
-				<p>happiness along the way</p>
-				<p>keep your spirit up</p>
-				<p>enjoy every single moment...</p>
-				<p>that you experience today</p>
-				<p>fill it with your most beautiful smile</p>
-				<p>and make it the best memory..</p>
-				<p>lastly...</p>
-				<p>I'd like to wish you one more time</p>
-				<p>a very happy birthday Xola Mathembisa</p>
+				<p>Who you are (*with Mufasa voice*)</p> 
+				<p>you’ve got dreams</p>
+				<p>and even if your daily reality feels shitty some days🙂</p>
+				<p>you’re still flying high</p>
+				<p>like a bird in the sky</p>
+				<p>(but please don’t poop on anyone oki 🙂)</p>
+				<p>New chapters are opening</p>
+				<p>and you’re the main character</p>
+				<p>so don’t stress</p>
+				<p>God got your back</p>
+				<p>and he got a lot going for you</p>
+				<p>This year?</p>
+				<p>It’ll be better</p>
+				<p>More smiles</p>
+				<p>More adventures</p>
+				<p>and hopefully...</p>
+				<p>more teasing from me😏</p>
+				<p>So keep your spirit up</p>
+				<p>embrace every second of this day</p>
+				<p>and let your smile do the magic</p>
+				<p>Now, before I get all serious again...</p>
+				<p>I just wanna say one more thing...</p>
+				<p>Happy Birthday, Prince ss 👑</p>
+				<p>Happy Birthday, Weronika 👑</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
