--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	   Your browser isn't invited for super fun audio time.
     </audio>
     <div class="balloons text-center" id="b1">
-    	<h2 style="color:#F2B300;">H</h2>
+    	<h2 style="color:#F2B300;">A</h2>
     </div>
     <div class="balloons text-center" id="b2">
     	<h2 style="color:#0719D4;">B</h2>
@@ -66,7 +66,7 @@
     	<h2 style="color:#8377E4;">K</h2>
     </div>
     <div class="balloons text-center" id="b11">
-    	<h2 style="color:#99C96A;">A</h2>
+    	<h2 style="color:#99C96A;">H</h2>
     </div>
 	
 
@@ -130,15 +130,15 @@
 				<p>thanks for being amazing</p>
 				<p>thanks for being funny, weird</p>
 				<p>I wish you all the best</p>
-				<p>less poop, more peace</p>
-				<p>less crying, more cake</p>
+				<p>less wiping, more peace</p>
+				<p>less crying, more eating</p>
 				<p>and may your wishes come true...</p>
 				<p>unless one of them is wanting to slap me 🥲 </p>
 				<p>Remember</p>
 				<p>Who you are (*with Mufasa voice*)</p> 
 				<p>you’ve got dreams</p>
 				<p>and even if your daily reality feels shitty some days🙂</p>
-				<p>you’re still flying high</p>
+				<p>you will still be flying high</p>
 				<p>like a bird in the sky</p>
 				<p>(but please don’t poop on anyone oki 🙂)</p>
 				<p>New chapters are opening</p>
