--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	   Your browser isn't invited for super fun audio time.
     </audio>
     <div class="balloons text-center" id="b1">
-    	<h2 style="color:#F2B300;">A</h2>
+    	<h2 style="color:#F2B300;">H</h2>
     </div>
     <div class="balloons text-center" id="b2">
     	<h2 style="color:#0719D4;">B</h2>
@@ -66,7 +66,7 @@
     	<h2 style="color:#8377E4;">K</h2>
     </div>
     <div class="balloons text-center" id="b11">
-    	<h2 style="color:#99C96A;">H</h2>
+    	<h2 style="color:#99C96A;">A</h2>
     </div>
 	
 
