--- a/index.html
+++ b/index.html
@@ -41,9 +41,6 @@
     <div class="balloons text-center" id="b2">
     	<h2 style="color:#0719D4;">B</h2>
     </div>
-	<div class="balloons text-center" id="b3">
-    	<h2 style="color:#D14D39;"> </h2>
-    </div>
 	<div class="balloons text-center" id="b4">
     	<h2 style="color:#8FAD00;">W</h2>
     </div>
@@ -65,6 +62,9 @@
 	<div class="balloons text-center" id="b10">
     	<h2 style="color:#8377E4;">K</h2>
     </div>
+	</div>
+	<div class="balloons text-center" id="b3">
+    	<h2 style="color:#D14D39;">A</h2>
     <div class="balloons text-center" id="b12">
     	<h2 style="color:#99C96A;">A</h2>
     </div>
